WebAccessibilityObjectWrapper method to retrieve related error message elements should return not-ignored accessibility elements. https://bugs.webkit.org/show_bug.cgi?id=222375

Reviewed by Chris Fleizach.

Source/WebCore:

Tests: accessibility/ios-simulator/aria-errormessage.html
       accessibility/mac/aria-errormessage.html

The iOS implementation of [WebAccessibilityObjectWrapper accessibilityErrorMessageElements]
was returning container elements that are not accessibility elements,
i.e., isAccessibilityElement return false. That caused that iOS clients could not get any info about the error messages.
With this patch, accessibilityErrorMessageElements drills down the
hierarchy of accessibility objects for the error message elements and
returns those descendants that are accessibility elements.

* accessibility/AccessibilityObjectInterface.h:
(WebCore::Accessibility::enumerateDescendants):
Hellper function to enumerate descendants of a given AX object.
* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityErrorMessageElements]):
Returns elements for which isAccessibilityElement == YES.

LayoutTests:

Replaced accessibility/aria-errormessage.html with mac and ios-simulator variants.

* accessibility/ios-simulator/aria-errormessage-expected.txt: Added.
* accessibility/ios-simulator/aria-errormessage.html: Copied from LayoutTests/accessibility/aria-errormessage.html.
* accessibility/mac/aria-errormessage-expected.txt: Renamed from LayoutTests/accessibility/aria-errormessage-expected.txt.
* accessibility/mac/aria-errormessage.html: Renamed from LayoutTests/accessibility/aria-errormessage.html.
* platform/glib/TestExpectations:
* platform/ios/TestExpectations:
* platform/mac-wk1/TestExpectations:
* platform/win/TestExpectations:


Canonical link: https://commits.webkit.org/234707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273684 268f45cc-cd09-0410-ab3c-d52691b4dbfc